[project]
name = "au-politics-money"
version = "0.1.0"
description = "Backend ingestion and normalization for Australian political money, gifts, interests, lobbying, and votes."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "httpx>=0.27",
  "pandas>=2.2",
  "pdfplumber>=0.11",
  "psycopg[binary]>=3.2",
  "pydantic>=2.7",
  "pytesseract>=0.3.13",
  "python-dotenv>=1.0",
  "rapidfuzz>=3.9",
  "typer>=0.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
au-politics-money = "au_politics_money.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
